# world-genesis

./: CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  HowTo.md  README.md  SECURITY.md  agent_state.py  agents.py  app.py  bridge.py  earth.py  generate_earth_data.py  generate_landmask.py  generate_present_day_data.py  geopolitics.py  god_mode.py  history.py  llm_module.py  macro.py  pyproject.toml  requirements.txt  scenarios.py  shared_world_model.py  sim_logger.py  test_agent_state.py  test_agents_lifecycle.py  test_bridge.py  test_geopolitics.py  test_llm_module.py  test_macro.py  test_shared_world_model.py  test_world.py  world.py  world_model.py
data/: earth_biome.npy  earth_elevation.npy  earth_fertility.npy  earth_fossil_fuels.npy  earth_freshwater.npy  earth_minerals.npy  earth_precipitation.npy  earth_temperature.npy  earth_terrain.npy  landmask.npy  present_day_climate.json  present_day_conflicts.json  present_day_countries.json  present_day_metadata.json  present_day_population.npy  present_day_resources.npz
docs/: data_attributions.md  validation.md
paper/: paper.bib  paper.md
scripts/: figures.py
templates/: index.html
